projects/composablekernel/rocm_ck/tests/compile_fail/ograd_dot_o_group_no_pad.cpp
// Copyright (c) Advanced Micro Devices, Inc., or its affiliates.
// SPDX-License-Identifier: MIT
//
// Must fail: GROUP mode requires pad_seqlen_q=true.
// Expected error: "group mode requires pad_seqlen_q=true"

#include <rocm_ck/ops/fmha_bwd/ograd_dot_o_spec.hpp>

using namespace rocm_ck;

constexpr auto bad = makeSpec(FmhaBwdOGradDotOConfig{
    .signature = {.dtype = DataType::FP16, .hdim_v = 128, .mode = FmhaMode::GROUP},
    .algorithm = {.pad_seqlen_q = false, .pad_hdim_v = true}});
